--- a/Yolo/yolo object detection1 .ipynb
+++ b/Yolo/yolo object detection1 .ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = cv2.dnn.readNet('yolov3-tiny.weights','yolov3-tiny.cfg')"
+    "net = cv2.dnn.readNet('yolov3-608.weights','yolov3-608.cfg')"
    ]
   },
   {
@@ -120,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['yolo_16', 'yolo_23']\n"
+      "['yolo_82', 'yolo_94', 'yolo_106']\n"
      ]
     }
    ],
@@ -146,30 +146,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([[0.0597829 , 0.05273973, 0.17765619, ..., 0.        , 0.        ,\n",
+      "[array([[0.03711009, 0.04611082, 0.32006752, ..., 0.        , 0.        ,\n",
       "        0.        ],\n",
-      "       [0.03927024, 0.04452548, 0.2241416 , ..., 0.        , 0.        ,\n",
+      "       [0.04485886, 0.02454682, 0.26601022, ..., 0.        , 0.        ,\n",
       "        0.        ],\n",
-      "       [0.03310811, 0.0452447 , 0.96758646, ..., 0.        , 0.        ,\n",
-      "        0.        ],\n",
-      "       ...,\n",
-      "       [0.9462963 , 0.96211433, 0.1984945 , ..., 0.        , 0.        ,\n",
-      "        0.        ],\n",
-      "       [0.9559401 , 0.9531429 , 0.22084059, ..., 0.        , 0.        ,\n",
-      "        0.        ],\n",
-      "       [0.9669117 , 0.9533934 , 0.7730628 , ..., 0.        , 0.        ,\n",
-      "        0.        ]], dtype=float32), array([[0.02193795, 0.0198808 , 0.02341989, ..., 0.        , 0.        ,\n",
-      "        0.        ],\n",
-      "       [0.0217988 , 0.02391635, 0.03281626, ..., 0.        , 0.        ,\n",
-      "        0.        ],\n",
-      "       [0.01350834, 0.02137448, 0.1280345 , ..., 0.        , 0.        ,\n",
+      "       [0.04934746, 0.03230881, 0.87932926, ..., 0.        , 0.        ,\n",
       "        0.        ],\n",
       "       ...,\n",
-      "       [0.97700554, 0.9779301 , 0.02420612, ..., 0.        , 0.        ,\n",
+      "       [0.9625247 , 0.9518994 , 0.46236646, ..., 0.        , 0.        ,\n",
       "        0.        ],\n",
-      "       [0.9779004 , 0.970786  , 0.03908009, ..., 0.        , 0.        ,\n",
+      "       [0.95763004, 0.96703565, 0.34046686, ..., 0.        , 0.        ,\n",
       "        0.        ],\n",
-      "       [0.98049253, 0.97819996, 0.12585245, ..., 0.        , 0.        ,\n",
+      "       [0.96321225, 0.9532411 , 0.8203856 , ..., 0.        , 0.        ,\n",
+      "        0.        ]], dtype=float32), array([[0.02311152, 0.01912672, 0.06004161, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.01260503, 0.01818085, 0.36434036, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.02031282, 0.01672787, 0.086753  , ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       ...,\n",
+      "       [0.9690349 , 0.9779853 , 0.04807407, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.9832755 , 0.9792702 , 0.3396868 , ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.9780269 , 0.9808213 , 0.06419007, ..., 0.        , 0.        ,\n",
+      "        0.        ]], dtype=float32), array([[0.01106647, 0.00657754, 0.0164411 , ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.01039905, 0.0102885 , 0.01927545, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.01023892, 0.0076842 , 0.17978488, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       ...,\n",
+      "       [0.9890594 , 0.9902786 , 0.0098929 , ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.98968863, 0.98597074, 0.01665534, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.9877606 , 0.9939858 , 0.15879074, ..., 0.        , 0.        ,\n",
       "        0.        ]], dtype=float32)]\n"
      ]
     }
@@ -187,8 +199,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "[0 2 3 1]\n"
+      "3\n",
+      "[1 2 0]\n"
      ]
     }
    ],
@@ -203,7 +215,7 @@
     "        class_id = np.argmax(scores)\n",
     "        confidence = scores[class_id]\n",
     "        \n",
-    "        if confidence > 0.4 :\n",
+    "        if confidence > 0.5:\n",
     "            center_x = int(detection[0] * width) \n",
     "            center_y = int(detection[1] * height)\n",
     "            w = int(detection[2] * width)\n",
@@ -217,7 +229,7 @@
     "            class_ids.append(class_id)\n",
     "print(len(boxes))\n",
     "            \n",
-    "indexes = cv2.dnn.NMSBoxes(boxes, confidences, 0.4,0.4)\n",
+    "indexes = cv2.dnn.NMSBoxes(boxes, confidences, 0.5,0.4)\n",
     "print(indexes.flatten())\n",
     "\n",
     "font = cv2.FONT_HERSHEY_PLAIN\n",
@@ -244,6 +256,26 @@
     "cv2.imshow(\"Yolo Image\", img)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imwrite('Object detected.jpg',img)"
    ]
   }
  ],
